--- a/src/App.css
+++ b/src/App.css
@@ -55,9 +55,57 @@
 }
 
 .form {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
+  max-width: 400px; /* Adjust as needed */
+  max-height: 500px;
+  margin-top: 10px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+
+.form input[type="text"],
+.form select {
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin: 10px 0; /* Increased margin for better spacing */
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.form input[type="text"]:focus,
+.form select:focus {
+  outline: none;
+  border-color: #66afe9;
+  box-shadow: 0 0 5px #66afe9;
+}
+
+.form button {
+  width: calc(50% - 5px);
+  padding: 10px;
+  margin-top: 20px; /* Increased margin for better spacing */
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  background-color: #4caf50;
+  color: white;
+}
+
+.form button:hover {
+  background-color: #45a049;
+}
+
+.form button:first-child {
+  margin-right: 10px; /* Add margin between the first and second button */
+}
+
+.error-message {
+  color: #ff0000;
+  font-size: 14px;
+  margin-top: 20px; /* Increased margin for better spacing */
+  padding: 10px; /* Added padding for better visual separation */
 }
 
 button {
