--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -55,8 +55,8 @@
 }
 
 .form {
-  max-width: 400px; /* Adjust as needed */
-  max-height: 500px;
+  max-width: 400px;
+  max-height: 650px;
   margin-top: 10px;
   padding: 20px;
   border: 1px solid #ccc;
